--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
 
- font-family: 'Montserrat', sans-serif;
+ font-family: 'roboto', sans-serif;
   background: url(images/pattern-background-desktop.svg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -19,7 +19,9 @@ html {
  }
 
  .card {
+    border-radius: 25px 25px 25px 25px; 
     background-color: white; 
+    text-align: center;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s; 
      grid-column-start: 2;
@@ -27,6 +29,10 @@ html {
      grid-row-start: 2;
      grid-row-end: 3;
 
+ }
+
+ p {
+     color: darkgray;
  }
 
 
