--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
     display: flex;
     margin-top: 1.5rem;
     margin-inline: min(10%, 3rem);
-    background-color: rgb(182, 182, 182);
+    background-color: rgb(223, 223, 223);
     border-radius: 15px;
     padding-inline: 1rem;
     padding-block: min(5%, 1rem);
@@ -151,6 +151,7 @@ body {
     align-items: center;
     margin-block: 1.5rem;
     margin-inline: min(10%, 3rem);
+    color: rgb(156, 156, 156);
     font-size: clamp(0.7rem, 4vw, 1.3rem ) ;
 }
 
